[gd_scene load_steps=207 format=2]

[ext_resource path="res://personatge.gd" type="Script" id=1]
[ext_resource path="res://main/fall/sprite_05.png" type="Texture" id=2]
[ext_resource path="res://main/adfgs/sprite_03.png" type="Texture" id=3]
[ext_resource path="res://main/fall/sprite_02.png" type="Texture" id=4]
[ext_resource path="res://main/walk_per/sprite_06.png" type="Texture" id=5]
[ext_resource path="res://main/walk_per/sprite_00.png" type="Texture" id=6]
[ext_resource path="res://main/adfgs/sprite_21.png" type="Texture" id=7]
[ext_resource path="res://main/adfgs/sprite_06.png" type="Texture" id=8]
[ext_resource path="res://main/idle_per/sprite_16.png" type="Texture" id=9]
[ext_resource path="res://main/ru1/sprite_03.png" type="Texture" id=10]
[ext_resource path="res://main/fall/sprite_03.png" type="Texture" id=11]
[ext_resource path="res://main/adfgs/sprite_24.png" type="Texture" id=12]
[ext_resource path="res://main/pe/sprite_07.png" type="Texture" id=13]
[ext_resource path="res://main/adfgs/sprite_10.png" type="Texture" id=14]
[ext_resource path="res://main/ru1/sprite_05.png" type="Texture" id=15]
[ext_resource path="res://main/adfgs/sprite_20.png" type="Texture" id=16]
[ext_resource path="res://main/fall/sprite_00.png" type="Texture" id=17]
[ext_resource path="res://main/pe/sprite_01.png" type="Texture" id=18]
[ext_resource path="res://main/pe/sprite_02.png" type="Texture" id=19]
[ext_resource path="res://main/adfgs/sprite_07.png" type="Texture" id=20]
[ext_resource path="res://main/pe/sprite_04.png" type="Texture" id=21]
[ext_resource path="res://main/adfgs/sprite_15.png" type="Texture" id=22]
[ext_resource path="res://main/ru1/sprite_01.png" type="Texture" id=23]
[ext_resource path="res://main/walk_per/sprite_05.png" type="Texture" id=24]
[ext_resource path="res://main/adfgs/sprite_13.png" type="Texture" id=25]
[ext_resource path="res://main/idle_per/sprite_07.png" type="Texture" id=26]
[ext_resource path="res://main/adfgs/sprite_16.png" type="Texture" id=27]
[ext_resource path="res://main/adfgs/sprite_11.png" type="Texture" id=28]
[ext_resource path="res://main/adfgs/sprite_18.png" type="Texture" id=29]
[ext_resource path="res://main/adfgs/sprite_14.png" type="Texture" id=30]
[ext_resource path="res://main/adfgs/sprite_12.png" type="Texture" id=31]
[ext_resource path="res://main/idle_per/sprite_26.png" type="Texture" id=32]
[ext_resource path="res://main/adfgs/sprite_23.png" type="Texture" id=33]
[ext_resource path="res://main/ru1/sprite_06.png" type="Texture" id=34]
[ext_resource path="res://main/adfgs/sprite_08.png" type="Texture" id=35]
[ext_resource path="res://main/adfgs/sprite_05.png" type="Texture" id=36]
[ext_resource path="res://main/idle_per/sprite_28.png" type="Texture" id=37]
[ext_resource path="res://main/pe/sprite_06.png" type="Texture" id=38]
[ext_resource path="res://main/fall/sprite_06.png" type="Texture" id=39]
[ext_resource path="res://main/pe/sprite_05.png" type="Texture" id=40]
[ext_resource path="res://main/pe/sprite_03.png" type="Texture" id=41]
[ext_resource path="res://main/adfgs/sprite_17.png" type="Texture" id=42]
[ext_resource path="res://main/adfgs/sprite_22.png" type="Texture" id=43]
[ext_resource path="res://main/walk_per/sprite_07.png" type="Texture" id=44]
[ext_resource path="res://main/ru1/sprite_04.png" type="Texture" id=45]
[ext_resource path="res://main/fall/sprite_07.png" type="Texture" id=46]
[ext_resource path="res://main/idle_per/sprite_27.png" type="Texture" id=47]
[ext_resource path="res://main/walk_per/sprite_01.png" type="Texture" id=48]
[ext_resource path="res://main/walk_per/sprite_09.png" type="Texture" id=49]
[ext_resource path="res://main/walk_per/sprite_04.png" type="Texture" id=50]
[ext_resource path="res://main/adfgs/sprite_19.png" type="Texture" id=51]
[ext_resource path="res://main/vool_per/sprite_16.png" type="Texture" id=52]
[ext_resource path="res://main/jump_per/sprite_07.png" type="Texture" id=53]
[ext_resource path="res://main/pe/sprite_00.png" type="Texture" id=54]
[ext_resource path="res://main/vool_per/sprite_07.png" type="Texture" id=55]
[ext_resource path="res://main/vool_per/sprite_12.png" type="Texture" id=56]
[ext_resource path="res://main/at22/sprite_20.png" type="Texture" id=57]
[ext_resource path="res://main/idle_per/sprite_13.png" type="Texture" id=58]
[ext_resource path="res://main/jump_per/sprite_10.png" type="Texture" id=59]
[ext_resource path="res://main/vool_per/sprite_15.png" type="Texture" id=60]
[ext_resource path="res://main/vool_per/sprite_11.png" type="Texture" id=61]
[ext_resource path="res://main/vool_per/sprite_01.png" type="Texture" id=62]
[ext_resource path="res://main/jump_per/sprite_36.png" type="Texture" id=63]
[ext_resource path="res://main/at1/sprite_1.png" type="Texture" id=64]
[ext_resource path="res://main/jump_per/sprite_22.png" type="Texture" id=65]
[ext_resource path="res://main/at22/sprite_23.png" type="Texture" id=66]
[ext_resource path="res://main/jump_per/sprite_19.png" type="Texture" id=67]
[ext_resource path="res://main/jump_per/sprite_18.png" type="Texture" id=68]
[ext_resource path="res://main/jump_per/sprite_16.png" type="Texture" id=69]
[ext_resource path="res://main/jump_per/sprite_04.png" type="Texture" id=70]
[ext_resource path="res://main/jump_per/sprite_00.png" type="Texture" id=71]
[ext_resource path="res://main/vool_per/sprite_14.png" type="Texture" id=72]
[ext_resource path="res://main/jump_per/sprite_25.png" type="Texture" id=73]
[ext_resource path="res://main/at1/sprite_4.png" type="Texture" id=74]
[ext_resource path="res://main/vool_per/sprite_10.png" type="Texture" id=75]
[ext_resource path="res://main/jump_per/sprite_15.png" type="Texture" id=76]
[ext_resource path="res://main/idle_per/sprite_36.png" type="Texture" id=77]
[ext_resource path="res://main/jump_per/sprite_28.png" type="Texture" id=78]
[ext_resource path="res://main/jump_per/sprite_20.png" type="Texture" id=79]
[ext_resource path="res://main/at3/sprite_29.png" type="Texture" id=80]
[ext_resource path="res://main/jump_per/sprite_08.png" type="Texture" id=81]
[ext_resource path="res://main/adfgs/sprite_04.png" type="Texture" id=82]
[ext_resource path="res://main/fall/sprite_04.png" type="Texture" id=83]
[ext_resource path="res://main/vool_per/sprite_04.png" type="Texture" id=84]
[ext_resource path="res://main/jump_per/sprite_29.png" type="Texture" id=85]
[ext_resource path="res://main/at3/sprite_26.png" type="Texture" id=86]
[ext_resource path="res://main/jump_per/sprite_11.png" type="Texture" id=87]
[ext_resource path="res://main/at1/sprite_2.png" type="Texture" id=88]
[ext_resource path="res://main/jump_per/sprite_30.png" type="Texture" id=89]
[ext_resource path="res://main/vool_per/sprite_06.png" type="Texture" id=90]
[ext_resource path="res://main/jump_per/sprite_05.png" type="Texture" id=91]
[ext_resource path="res://main/vool_per/sprite_13.png" type="Texture" id=92]
[ext_resource path="res://main/vool_per/sprite_03.png" type="Texture" id=93]
[ext_resource path="res://main/ru1/sprite_00.png" type="Texture" id=94]
[ext_resource path="res://main/ru1/sprite_07.png" type="Texture" id=95]
[ext_resource path="res://main/jump_per/sprite_32.png" type="Texture" id=96]
[ext_resource path="res://main/fall/sprite_01.png" type="Texture" id=97]
[ext_resource path="res://main/at3/sprite_31.png" type="Texture" id=98]
[ext_resource path="res://main/idle_per/sprite_05.png" type="Texture" id=99]
[ext_resource path="res://main/adfgs/sprite_09.png" type="Texture" id=100]
[ext_resource path="res://main/jump_per/sprite_39.png" type="Texture" id=101]
[ext_resource path="res://main/vool_per/sprite_02.png" type="Texture" id=102]
[ext_resource path="res://main/at3/sprite_37.png" type="Texture" id=103]
[ext_resource path="res://main/walk_per/sprite_08.png" type="Texture" id=104]
[ext_resource path="res://main/jump_per/sprite_26.png" type="Texture" id=105]
[ext_resource path="res://main/jump_per/sprite_38.png" type="Texture" id=106]
[ext_resource path="res://main/jump_per/sprite_27.png" type="Texture" id=107]
[ext_resource path="res://main/walk_per/sprite_03.png" type="Texture" id=108]
[ext_resource path="res://main/walk_per/sprite_02.png" type="Texture" id=109]
[ext_resource path="res://main/jump_per/sprite_14.png" type="Texture" id=110]
[ext_resource path="res://main/vool_per/sprite_00.png" type="Texture" id=111]
[ext_resource path="res://main/ru1/sprite_02.png" type="Texture" id=112]
[ext_resource path="res://main/at1/sprite_3.png" type="Texture" id=113]
[ext_resource path="res://main/at1/sprite_0.png" type="Texture" id=114]
[ext_resource path="res://main/jump_per/sprite_24.png" type="Texture" id=115]
[ext_resource path="res://main/jump_per/sprite_03.png" type="Texture" id=116]
[ext_resource path="res://main/jump_per/sprite_02.png" type="Texture" id=117]
[ext_resource path="res://main/jump_per/sprite_21.png" type="Texture" id=118]
[ext_resource path="res://main/jump_per/sprite_12.png" type="Texture" id=119]
[ext_resource path="res://main/jump_per/sprite_09.png" type="Texture" id=120]
[ext_resource path="res://main/jump_per/sprite_31.png" type="Texture" id=121]
[ext_resource path="res://main/at3/sprite_38.png" type="Texture" id=122]
[ext_resource path="res://main/idle_per/sprite_24.png" type="Texture" id=123]
[ext_resource path="res://main/idle_per/sprite_02.png" type="Texture" id=124]
[ext_resource path="res://main/idle_per/sprite_37.png" type="Texture" id=125]
[ext_resource path="res://main/at3/sprite_35.png" type="Texture" id=126]
[ext_resource path="res://main/jump_per/sprite_34.png" type="Texture" id=127]
[ext_resource path="res://main/at22/sprite_16.png" type="Texture" id=128]
[ext_resource path="res://main/jump_per/sprite_01.png" type="Texture" id=129]
[ext_resource path="res://main/at3/sprite_30.png" type="Texture" id=130]
[ext_resource path="res://main/idle_per/sprite_14.png" type="Texture" id=131]
[ext_resource path="res://main/idle_per/sprite_03.png" type="Texture" id=132]
[ext_resource path="res://main/at22/sprite_22.png" type="Texture" id=133]
[ext_resource path="res://main/at3/sprite_34.png" type="Texture" id=134]
[ext_resource path="res://main/at12/sprite_13.png" type="Texture" id=135]
[ext_resource path="res://main/vool_per/sprite_08.png" type="Texture" id=136]
[ext_resource path="res://main/jump_per/sprite_13.png" type="Texture" id=137]
[ext_resource path="res://main/idle_per/sprite_39.png" type="Texture" id=138]
[ext_resource path="res://main/jump_per/sprite_23.png" type="Texture" id=139]
[ext_resource path="res://main/idle_per/sprite_15.png" type="Texture" id=140]
[ext_resource path="res://main/idle_per/sprite_23.png" type="Texture" id=141]
[ext_resource path="res://main/idle_per/sprite_19.png" type="Texture" id=142]
[ext_resource path="res://main/idle_per/sprite_31.png" type="Texture" id=143]
[ext_resource path="res://main/at22/sprite_17.png" type="Texture" id=144]
[ext_resource path="res://main/jump_per/sprite_37.png" type="Texture" id=145]
[ext_resource path="res://main/at12/sprite_08.png" type="Texture" id=146]
[ext_resource path="res://main/idle_per/sprite_00.png" type="Texture" id=147]
[ext_resource path="res://main/idle_per/sprite_33.png" type="Texture" id=148]
[ext_resource path="res://main/idle_per/sprite_35.png" type="Texture" id=149]
[ext_resource path="res://main/vool_per/sprite_19.png" type="Texture" id=150]
[ext_resource path="res://main/jump_per/sprite_35.png" type="Texture" id=151]
[ext_resource path="res://main/at22/sprite_15.png" type="Texture" id=152]
[ext_resource path="res://main/idle_per/sprite_22.png" type="Texture" id=153]
[ext_resource path="res://main/jump_per/sprite_17.png" type="Texture" id=154]
[ext_resource path="res://main/at12/sprite_14.png" type="Texture" id=155]
[ext_resource path="res://main/idle_per/sprite_08.png" type="Texture" id=156]
[ext_resource path="res://main/at12/sprite_09.png" type="Texture" id=157]
[ext_resource path="res://main/at3/sprite_27.png" type="Texture" id=158]
[ext_resource path="res://main/at12/sprite_11.png" type="Texture" id=159]
[ext_resource path="res://main/at22/sprite_19.png" type="Texture" id=160]
[ext_resource path="res://main/at3/sprite_33.png" type="Texture" id=161]
[ext_resource path="res://main/vool_per/sprite_18.png" type="Texture" id=162]
[ext_resource path="res://main/idle_per/sprite_25.png" type="Texture" id=163]
[ext_resource path="res://main/at3/sprite_32.png" type="Texture" id=164]
[ext_resource path="res://main/adfgs/sprite_00.png" type="Texture" id=165]
[ext_resource path="res://main/at22/sprite_24.png" type="Texture" id=166]
[ext_resource path="res://main/vool_per/sprite_09.png" type="Texture" id=167]
[ext_resource path="res://main/idle_per/sprite_06.png" type="Texture" id=168]
[ext_resource path="res://main/idle_per/sprite_09.png" type="Texture" id=169]
[ext_resource path="res://main/jump_per/sprite_33.png" type="Texture" id=170]
[ext_resource path="res://main/idle_per/sprite_04.png" type="Texture" id=171]
[ext_resource path="res://main/idle_per/sprite_01.png" type="Texture" id=172]
[ext_resource path="res://main/at22/sprite_18.png" type="Texture" id=173]
[ext_resource path="res://main/at12/sprite_10.png" type="Texture" id=174]
[ext_resource path="res://main/at12/sprite_05.png" type="Texture" id=175]
[ext_resource path="res://main/idle_per/sprite_17.png" type="Texture" id=176]
[ext_resource path="res://main/jump_per/sprite_06.png" type="Texture" id=177]
[ext_resource path="res://main/idle_per/sprite_12.png" type="Texture" id=178]
[ext_resource path="res://main/at12/sprite_12.png" type="Texture" id=179]
[ext_resource path="res://main/vool_per/sprite_05.png" type="Texture" id=180]
[ext_resource path="res://main/adfgs/sprite_01.png" type="Texture" id=181]
[ext_resource path="res://main/idle_per/sprite_10.png" type="Texture" id=182]
[ext_resource path="res://main/idle_per/sprite_38.png" type="Texture" id=183]
[ext_resource path="res://main/vool_per/sprite_17.png" type="Texture" id=184]
[ext_resource path="res://main/adfgs/sprite_02.png" type="Texture" id=185]
[ext_resource path="res://main/at3/sprite_28.png" type="Texture" id=186]
[ext_resource path="res://main/at3/sprite_36.png" type="Texture" id=187]
[ext_resource path="res://main/at12/sprite_06.png" type="Texture" id=188]
[ext_resource path="res://main/at3/sprite_39.png" type="Texture" id=189]
[ext_resource path="res://main/at22/sprite_21.png" type="Texture" id=190]
[ext_resource path="res://main/idle_per/sprite_11.png" type="Texture" id=191]
[ext_resource path="res://main/idle_per/sprite_29.png" type="Texture" id=192]
[ext_resource path="res://main/idle_per/sprite_20.png" type="Texture" id=193]
[ext_resource path="res://main/idle_per/sprite_30.png" type="Texture" id=194]
[ext_resource path="res://main/idle_per/sprite_32.png" type="Texture" id=195]
[ext_resource path="res://main/idle_per/sprite_34.png" type="Texture" id=196]
[ext_resource path="res://main/at3/sprite_25.png" type="Texture" id=197]
[ext_resource path="res://main/idle_per/sprite_21.png" type="Texture" id=198]
[ext_resource path="res://main/idle_per/sprite_18.png" type="Texture" id=199]
[ext_resource path="res://main/at12/sprite_07.png" type="Texture" id=200]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.846, 20.9064 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.2419, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26.4605, 19.2626 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 49.6369, 32.71 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 17.5856, 20.621 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 147 ), ExtResource( 172 ), ExtResource( 124 ), ExtResource( 132 ), ExtResource( 171 ), ExtResource( 99 ), ExtResource( 168 ), ExtResource( 26 ), ExtResource( 156 ), ExtResource( 169 ), ExtResource( 182 ), ExtResource( 191 ), ExtResource( 178 ), ExtResource( 58 ), ExtResource( 131 ), ExtResource( 140 ), ExtResource( 9 ), ExtResource( 176 ), ExtResource( 199 ), ExtResource( 142 ), ExtResource( 193 ), ExtResource( 198 ), ExtResource( 153 ), ExtResource( 141 ), ExtResource( 123 ), ExtResource( 163 ), ExtResource( 32 ), ExtResource( 47 ), ExtResource( 37 ), ExtResource( 192 ), ExtResource( 194 ), ExtResource( 143 ), ExtResource( 195 ), ExtResource( 148 ), ExtResource( 196 ), ExtResource( 149 ), ExtResource( 77 ), ExtResource( 125 ), ExtResource( 183 ), ExtResource( 138 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 71 ), ExtResource( 129 ), ExtResource( 117 ), ExtResource( 116 ), ExtResource( 70 ), ExtResource( 91 ), ExtResource( 177 ), ExtResource( 53 ), ExtResource( 81 ), ExtResource( 120 ), ExtResource( 59 ), ExtResource( 87 ), ExtResource( 119 ), ExtResource( 137 ), ExtResource( 110 ), ExtResource( 76 ), ExtResource( 69 ), ExtResource( 154 ), ExtResource( 68 ), ExtResource( 67 ), ExtResource( 79 ), ExtResource( 118 ), ExtResource( 65 ), ExtResource( 139 ), ExtResource( 115 ), ExtResource( 73 ), ExtResource( 105 ), ExtResource( 107 ), ExtResource( 78 ), ExtResource( 85 ), ExtResource( 89 ), ExtResource( 121 ), ExtResource( 96 ), ExtResource( 170 ), ExtResource( 127 ), ExtResource( 151 ), ExtResource( 63 ), ExtResource( 145 ), ExtResource( 106 ), ExtResource( 101 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 97 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 83 ), ExtResource( 2 ), ExtResource( 39 ), ExtResource( 46 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 197 ), ExtResource( 86 ), ExtResource( 158 ), ExtResource( 186 ), ExtResource( 80 ), ExtResource( 130 ), ExtResource( 98 ), ExtResource( 164 ), ExtResource( 161 ), ExtResource( 134 ), ExtResource( 126 ), ExtResource( 187 ), ExtResource( 103 ), ExtResource( 122 ), ExtResource( 189 ) ],
"loop": true,
"name": "attack_3",
"speed": 5.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 41 ), ExtResource( 21 ), ExtResource( 40 ), ExtResource( 38 ), ExtResource( 13 ) ],
"loop": true,
"name": "baixant",
"speed": 5.0
}, {
"frames": [ ExtResource( 111 ), ExtResource( 62 ), ExtResource( 102 ), ExtResource( 93 ), ExtResource( 84 ), ExtResource( 180 ), ExtResource( 90 ), ExtResource( 55 ), ExtResource( 136 ), ExtResource( 167 ), ExtResource( 75 ), ExtResource( 61 ), ExtResource( 56 ), ExtResource( 92 ), ExtResource( 72 ), ExtResource( 60 ), ExtResource( 52 ), ExtResource( 184 ), ExtResource( 162 ), ExtResource( 150 ) ],
"loop": true,
"name": "volte",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 48 ), ExtResource( 109 ), ExtResource( 108 ), ExtResource( 50 ), ExtResource( 24 ), ExtResource( 5 ), ExtResource( 44 ), ExtResource( 104 ), ExtResource( 49 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 165 ), ExtResource( 181 ), ExtResource( 185 ), ExtResource( 3 ), ExtResource( 82 ), ExtResource( 36 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 35 ), ExtResource( 100 ), ExtResource( 14 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 25 ), ExtResource( 30 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 42 ), ExtResource( 29 ), ExtResource( 51 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 43 ), ExtResource( 33 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle_escalando",
"speed": 5.0
}, {
"frames": [ ExtResource( 152 ), ExtResource( 128 ), ExtResource( 144 ), ExtResource( 173 ), ExtResource( 160 ), ExtResource( 57 ), ExtResource( 190 ), ExtResource( 133 ), ExtResource( 66 ), ExtResource( 166 ) ],
"loop": true,
"name": "attack_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 94 ), ExtResource( 23 ), ExtResource( 112 ), ExtResource( 10 ), ExtResource( 45 ), ExtResource( 15 ), ExtResource( 34 ), ExtResource( 95 ) ],
"loop": true,
"name": "flying",
"speed": 5.0
}, {
"frames": [ ExtResource( 114 ), ExtResource( 64 ), ExtResource( 88 ), ExtResource( 113 ), ExtResource( 74 ), ExtResource( 175 ), ExtResource( 188 ), ExtResource( 200 ), ExtResource( 146 ), ExtResource( 157 ), ExtResource( 174 ), ExtResource( 159 ), ExtResource( 179 ), ExtResource( 135 ), ExtResource( 155 ) ],
"loop": true,
"name": "attack_1",
"speed": 5.0
} ]

[node name="personatge" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -12.8616, -0.593838 )
cast_to = Vector2( 0, 20 )

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 22.6304, -0.593838 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="hitbox_main" type="Area2D" parent="."]
collision_mask = 6

[node name="right" type="CollisionShape2D" parent="hitbox_main"]
position = Vector2( 4.61938, -0.593838 )
shape = SubResource( 1 )

[node name="left" type="CollisionShape2D" parent="hitbox_main"]
position = Vector2( -6.49263, -0.593838 )
shape = SubResource( 1 )
disabled = true

[node name="hitbox_attack_1" type="Area2D" parent="." groups=[
"attack_1",
]]
collision_layer = 0
collision_mask = 4

[node name="right" type="CollisionShape2D" parent="hitbox_attack_1"]
position = Vector2( 30.5604, -0.593838 )
shape = SubResource( 2 )
disabled = true

[node name="left" type="CollisionShape2D" parent="hitbox_attack_1"]
position = Vector2( -27.3806, -0.593838 )
shape = SubResource( 2 )
disabled = true

[node name="hitbox_attack_2" type="Area2D" parent="." groups=[
"attack_2",
]]
collision_layer = 0
collision_mask = 4

[node name="right" type="CollisionShape2D" parent="hitbox_attack_2"]
position = Vector2( 38.5954, -0.593838 )
shape = SubResource( 3 )
disabled = true

[node name="left" type="CollisionShape2D" parent="hitbox_attack_2"]
position = Vector2( -37.0646, -0.593838 )
shape = SubResource( 3 )
disabled = true

[node name="hitbox_attack_3" type="Area2D" parent="." groups=[
"attack_3",
]]
collision_layer = 0
collision_mask = 4

[node name="right" type="CollisionShape2D" parent="hitbox_attack_3"]
position = Vector2( 4.61938, -6.83014 )
shape = SubResource( 4 )
disabled = true

[node name="left" type="CollisionShape2D" parent="hitbox_attack_3"]
position = Vector2( -1.54463, -6.83014 )
shape = SubResource( 4 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.61938, -0.593838 )
shape = SubResource( 5 )

[node name="main_char" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3.8147e-06 )
scale = Vector2( 0.731884, 0.707792 )
frames = SubResource( 6 )
animation = "idle"
frame = 37
speed_scale = 1.5
playing = true
